objects/Patient__c.object
<CustomObject>
    <label>Patient</label>
    <nameField>
        <label>Patient Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Patients</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                </value>
                <value>
                    <fullName>Male</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Patient_ID__c</fullName>
        <displayFormat>PID-{0000}</displayFormat>
        <label>Patient ID</label>
        <type>AutoNumber</type>
    </fields>
    <fields>
        <fullName>Blood_Group__c</fullName>
        <label>Blood Group</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>a-</fullName>
                </value>
                <value>
                    <fullName>a+</fullName>
                </value>
                <value>
                    <fullName>ab-</fullName>
                </value>
                <value>
                    <fullName>ab+</fullName>
                </value>
                <value>
                    <fullName>b-</fullName>
                </value>
                <value>
                    <fullName>b+</fullName>
                </value>
                <value>
                    <fullName>o-</fullName>
                </value>
                <value>
                    <fullName>o+</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Patient_Age__c</fullName>
        <formula>TODAY()  -  Age__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Patient Age</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Phon_Number__c</fullName>
        <label>Phon Number</label>
        <required>true</required>
        <type>Phone</type>
    </fields>
</CustomObject>